; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/block/extr_xsysace.c_ace_datain_be16.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/block/extr_xsysace.c_ace_datain_be16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ace_device = type { i32*, i64 }

@ACE_FIFO_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ace_device*)* @ace_datain_be16 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ace_datain_be16(%struct.ace_device* %0) #0 {
  %2 = alloca %struct.ace_device*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store %struct.ace_device* %0, %struct.ace_device** %2, align 8
  %5 = load i32, i32* @ACE_FIFO_SIZE, align 4
  %6 = sdiv i32 %5, 2
  store i32 %6, i32* %3, align 4
  %7 = load %struct.ace_device*, %struct.ace_device** %2, align 8
  %8 = getelementptr inbounds %struct.ace_device, %struct.ace_device* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  store i32* %9, i32** %4, align 8
  br label %10

10:                                               ; preds = %14, %1
  %11 = load i32, i32* %3, align 4
  %12 = add nsw i32 %11, -1
  store i32 %12, i32* %3, align 4
  %13 = icmp ne i32 %11, 0
  br i1 %13, label %14, label %22

14:                                               ; preds = %10
  %15 = load %struct.ace_device*, %struct.ace_device** %2, align 8
  %16 = getelementptr inbounds %struct.ace_device, %struct.ace_device* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  %18 = add nsw i64 %17, 64
  %19 = call i32 @in_le16(i64 %18)
  %20 = load i32*, i32** %4, align 8
  %21 = getelementptr inbounds i32, i32* %20, i32 1
  store i32* %21, i32** %4, align 8
  store i32 %19, i32* %20, align 4
  br label %10

22:                                               ; preds = %10
  %23 = load i32*, i32** %4, align 8
  %24 = load %struct.ace_device*, %struct.ace_device** %2, align 8
  %25 = getelementptr inbounds %struct.ace_device, %struct.ace_device* %24, i32 0, i32 0
  store i32* %23, i32** %25, align 8
  ret void
}

declare dso_local i32 @in_le16(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
